--- a/.github/workflows/lint-test-build.yml
+++ b/.github/workflows/lint-test-build.yml
@@ -14,6 +14,17 @@ jobs:
         with:
           go-version: ">=1.25.3"
 
+      - name: Cache Go tools
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+            ~/go/bin
+          key: ${{ runner.os }}-golang-${{ hashFiles('go.sum', 'Makefile') }}
+          restore-keys: |
+            ${{ runner.os }}-golang-
+
       - name: golangci-lint
         uses: golangci/golangci-lint-action@e7fa5ac41e1cf5b7d48e45e42232ce7ada589601 # v9
         with:
@@ -29,8 +40,8 @@ jobs:
       - name: test
         run: make test
 
-      - name: check contract
-        run: make proto-breaking
+      #- name: check contract
+      #  run: make proto-breaking
 
       - name: Run integration tests
         run: make integration-test
